--- a/.github/workflows/ws.yml
+++ b/.github/workflows/ws.yml
@@ -18,7 +18,7 @@ jobs:
       - name: instalar os pacotes do requirements.txt
         run: python -m pip install pip install -r requirements.txt
 
-      - name: executar arquivo de scrapping
+      - name: executar arquivo scrapping
         env:
           TOKEN_01: ${{ secrets.TOKEN_01 }}
           TOKEN_02: ${{ secrets.TOKEN_02 }}
