--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -1,24 +1,22 @@
-name: Python App
+name: Python application
 
 on:
   schedule:
-    - cron: '* 3 * * *'
-
+    - cron: "* 3 * * *"
+  workflow_dispatch:
 jobs:
-  run_schedule:
+  build:
     runs-on: ubuntu-latest
     steps:
-
-      - name: check conteudo do repositorio
+      - name: Checkout repo
         uses: actions/checkout@v3
-
-      - name: instalar o python
+      - name: Set up Python
         uses: actions/setup-python@v4
-
-      - name: instalar os pacotes do requirements.txt
-        run: python -m pip install pip install -r requirements.txt
-
-      - name: executar arquivo de scrapping
+        with:
+          python-version: '3.9'
+      - name: Install requirements
+        run: python -m pip install pip install -r requirements.tx
+      - name: Run a Python script
         env:
           TOKEN_01: ${{ secrets.TOKEN_01 }}
         run: python ws.py
