--- a/.github/workflows/ws01.yml
+++ b/.github/workflows/ws01.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: '3.9'
       - name: Install requirements
-        run: python -m pip install pip install -r requirements.tx
+        run: python -m pip install pip install -r requirements.txt
       - name: Run a Python script
         env:
           TOKEN_01: ${{ secrets.TOKEN_01 }}
